--- a/package.json
+++ b/package.json
@@ -45,5 +45,7 @@
     "ts-node": "~3.0.4",
     "tslint": "~5.3.2",
     "typescript": "~2.3.3"
-  }
+  },
+  "main": "index.js",
+  "author": "Marco Traspel <mt-webdev@outlook.com>"
 }
